# trace-scope

./: .clang-tidy  .clang-tidy-minimal  .clang-tidy-simple  .gitignore  CMakeLists.txt  CMakePresets.json  HISTORY.md  LICENSE  README.md  RELEASE_NOTES_v0.8.0-alpha.md  RELEASE_NOTES_v0.9.0-alpha.md  VERSION  build_ninja_clang.bat  build_ninja_clang.ps1  build_ninja_msvc.bat  build_ninja_msvc.ps1  trace_scope_impl.cpp
examples/: CMakeLists.txt  example_async_benchmark.cpp  example_async_immediate.cpp  example_basic.cpp  example_colors.cpp  example_config_file.cpp  example_custom_markers.cpp  example_dll_shared.cpp  example_double_buffer.cpp  example_filtering.cpp  example_hybrid.cpp  example_long_running.cpp  example_regression.cpp  example_stats.cpp  example_test_v08.cpp  example_thread_colors.cpp  filter_config.ini  test_python_tool.cpp  trace_config.ini
examples/example_dll_real/: CMakeLists.txt  dll_main.cpp  my_library.cpp  my_library.h
include/: trace_scope.hpp
include/trace-scope/: trace_scope.hpp  trace_scope_clean_test.hpp  trace_scope_hybrid.hpp  trace_scope_test.hpp
include/trace-scope/trace_scope_modular/: functions.hpp  macros.hpp  modules.txt  platform.hpp  variables.hpp
include/trace-scope/trace_scope_modular/namespaces/: _Binary_hypot.hpp  dll_shared_state.hpp  filter_utils.hpp  ini_parser.hpp  internal.hpp  memory_utils.hpp  pmr.hpp  shared_memory.hpp  stats.hpp  string_literals.hpp  this_thread.hpp
include/trace-scope/trace_scope_modular/types/: AsyncQueue.hpp  Config.hpp  Event.hpp  Registry.hpp  Ring.hpp  Scope.hpp  async_queue.hpp  enums.hpp  stats.hpp  thread_ring_guard.hpp
include/trace-scope/trace_scope_modular_clean/: functions.hpp  platform.hpp  variables.hpp
include/trace-scope/trace_scope_modular_clean/namespaces/: _Ensure_adl.hpp  _Has_ADL_swap_detail.hpp  chrono.hpp  chrono_literals.hpp  filesystem.hpp  literals.hpp  rel_ops.hpp  shared_memory.hpp  std.hpp  stdext.hpp  string_view_literals.hpp
include/trace-scope/trace_scope_modular_clean/types/: __m128d.hpp  __m512d.hpp  _async_duplicate_extents_status.hpp  _bin_count.hpp  _bin_range.hpp  _bin_results.hpp  _boot_area_info.hpp  _changer_element.hpp  _changer_element_list.hpp  _changer_element_status.hpp  _changer_element_status_ex.hpp  _changer_exchange_medium.hpp  _changer_initialize_element_status.hpp  _changer_move_medium.hpp  _changer_product_data.hpp  _changer_read_element_status.hpp  _changer_send_volume_tag_information.hpp  _changer_set_access.hpp  _changer_set_position.hpp  _cluster_range.hpp  _container_root_info_input.hpp  _container_root_info_output.hpp  _container_volume_state.hpp  _create_disk.hpp  _create_disk_gpt.hpp  _create_disk_mbr.hpp  _csv_control_param.hpp  _csv_is_owned_by_csvfs.hpp  _csv_mgmt_lock.hpp  _csv_namespace_info.hpp  _csv_query_file_revision.hpp  _csv_query_file_revision_file_id_128.hpp  _csv_query_mds_path.hpp  _csv_query_mds_path_v2.hpp  _csv_query_redirect_state.hpp  _csv_query_veto_file_direct_io_output.hpp  _csv_query_volume_id.hpp  _csv_query_volume_redirect_state.hpp  _csv_set_volume_id.hpp  _decryption_status_buffer.hpp  (+541 more)
include/trace-scope/trace_scope_modular_clean_manual/: macros.hpp  platform.hpp
include/trace-scope/trace_scope_modular_clean_manual/namespaces/: shared_memory.hpp
include/trace-scope/trace_scope_modular_clean_manual/types/: event.hpp  registry.hpp  stats.hpp
include/trace-scope/trace_scope_modular_v2/: functions.hpp  macros.hpp  modules.txt  platform.hpp  variables.hpp
include/trace-scope/trace_scope_modular_v2/namespaces/: _Binary_hypot.hpp  _Ensure_adl.hpp  _Has_ADL_swap_detail.hpp  chrono.hpp  chrono_literals.hpp  dll_shared_state.hpp  filesystem.hpp  filter_utils.hpp  ini_parser.hpp  internal.hpp  literals.hpp  memory_utils.hpp  pmr.hpp  rel_ops.hpp  shared_memory.hpp  stats.hpp  std.hpp  stdext.hpp  string_literals.hpp  string_view_literals.hpp  this_thread.hpp
include/trace-scope/trace_scope_modular_v2/types/: asyncqueue.hpp  config.hpp  enums.hpp  event.hpp  functionstats.hpp  registry.hpp  ring.hpp  scope.hpp  threadringguard.hpp  threadstats.hpp  tracestream.hpp
scripts/: lint.bat  lint.sh  run-clang-tidy.bat  run-clang-tidy.sh
src/: trace_scope_impl.cpp
tests/: CMakeLists.txt  test_async_immediate.cpp  test_binary_format.cpp  test_comprehensive.cpp  test_config_file.cpp  test_config_invalid.ini  test_config_partial.ini  test_config_valid.ini  test_double_buffer.cpp  test_filtering.cpp  test_framework.hpp  test_framework_test.cpp  test_trace.cpp
tests/test_dll/: CMakeLists.txt  test_dll_library.cpp  test_dll_library.h  test_dll_main.cpp
tools/: ast_aware_merger.py  clean_manual_extractor.py  cpp_ast_parser.py  extract_modular.py  final_fix.py  fix_modular_issues.py  hybrid_extractor.py  merge_header.py  requirements.txt  targeted_extractor.py  test_libclang.py  test_trace_instrument.py  test_trc.py  test_trc_analyze.py  test_trc_compare.py  test_trc_diff.py  test_trc_instrument.py  test_trc_pretty.py  test_trc_pretty_v2.py  trace_instrument.py  trc.py  trc_analyze.py  trc_common.py  trc_compare.py  trc_diff.py  trc_instrument.py  trc_pretty.py
